Bug 100975 - i915_dmc_info missing IS_KABYLAKE check
Summary: i915_dmc_info missing IS_KABYLAKE check
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: DRI git
Hardware: All All
: medium normal
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-05-09 06:35 UTC by Nathan Ciobanu
Modified: 2017-07-27 16:48 UTC (History)
3 users (show)

See Also:
i915 platform: KBL
i915 features: firmware/dmc


Attachments

Description Nathan Ciobanu 2017-05-09 06:35:59 UTC
Adding the Kabylake new DMC firmware i915_dmc_info doesn't expose DC3 -> DC5 and DC5 -> DC6 counts.
Comment 1 Mika Kuoppala 2017-05-09 13:17:45 UTC
commit 48de568c644c5b5a9307c92b13c53811c5a93999
Author: Mika Kuoppala <mika.kuoppala@linux.intel.com>
Date:   Tue May 9 13:05:22 2017 +0300

    drm/i915: Show dmc debug registers on Kabylake
Comment 2 Nathan Ciobanu 2017-05-10 02:28:04 UTC
Thanks for the quick patch Mika, unfortunately the first version of the KBL DMC firmware was 1.1 so CSR_VERSION macro should check for >1.1 in the KBL case.
Comment 3 Mika Kuoppala 2017-05-11 11:52:42 UTC
All the released kbl firmwares support the registers in question. So
the version check is not relevant.
Comment 4 Nathan Ciobanu 2017-05-13 00:52:15 UTC
Sorry, my bad. It works fine. I'm closing this bug fixed by Mika's patch.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.